--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file for your Flutter app
 
 buildscript {
     repositories {
@@ -9,7 +9,6 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.22'
-        // Flutter Gradle plugin line ko hata diya gaya hai (Flutter khud inject karta hai)
     }
 }
 
