--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id 'dev.flutter.flutter-gradle-plugin'
+    id 'org.jetbrains.kotlin.android'
 }
 
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+
 android {
-    namespace "com.example.formula_a"
+    namespace "com.example.formula_ai"
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.formula_a"
+        applicationId "com.example.formula_ai"
         minSdk 21
         targetSdk 34
         versionCode 1
@@ -18,6 +19,7 @@ android {
 
     buildTypes {
         release {
+            // Debug keystore se sign karega (baad me hum apna custom keystore lagayenge)
             signingConfig signingConfigs.debug
             minifyEnabled false
         }
@@ -26,4 +28,8 @@ android {
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.22"
 }
