--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,14 +1,19 @@
-// Flutter-compatible settings.gradle for CI/CD (GitHub Actions)
+// ✅ Final working settings.gradle for Flutter GitHub Actions builds
 
 include(":app")
 
-def flutterProjectRoot = rootDir.getAbsoluteFile().getParentFile()
-def flutterSdkPath = System.getenv("FLUTTER_HOME") ?: "${flutterProjectRoot}/flutter"
+def flutterSdkPath = System.getenv("HOME") + "/hostedtoolcache/flutter/stable/x64"
+def flutterSdkDir = new File(flutterSdkPath)
 
-def flutterToolsGradle = new File(flutterSdkPath, "packages/flutter_tools/gradle/app_plugin_loader.gradle")
+if (!flutterSdkDir.exists()) {
+    // fallback if local or self-hosted
+    flutterSdkDir = new File(rootDir.parentFile, "flutter")
+}
+
+def flutterToolsGradle = new File(flutterSdkDir, "packages/flutter_tools/gradle/app_plugin_loader.gradle")
 
 if (!flutterToolsGradle.exists()) {
-    throw new GradleException("Flutter Gradle plugin not found at: ${flutterToolsGradle}")
+    throw new GradleException("❌ Flutter Gradle plugin not found at: ${flutterToolsGradle}")
 }
 
 setBinding(new Binding([gradle: this]))
