--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,29 +1,2 @@
-// Works in local builds and GitHub Actions
-
 include(":app")
-
-// Ask Flutter CLI for the real SDK path
-def flutterSdkPath = "flutter".execute().text.trim()
-if (flutterSdkPath.startsWith("/")) {
-    // nothing
-} else {
-    // Fallback: just assume the flutter binary is in PATH
-    flutterSdkPath = "which flutter".execute().text.trim()
-}
-
-// Run `flutter --version` quietly so Gradle caches the SDK
-println("Using Flutter SDK from: " + flutterSdkPath)
-
-def flutterToolsGradle = new File(flutterSdkPath)
-        .getParentFile()
-        .getParentFile()
-        .toPath()
-        .resolve("packages/flutter_tools/gradle/app_plugin_loader.gradle")
-        .toFile()
-
-if (!flutterToolsGradle.exists()) {
-    throw new GradleException("Flutter Gradle plugin not found at: ${flutterToolsGradle}")
-}
-
-setBinding(new Binding([gradle: this]))
-evaluate(flutterToolsGradle)
+rootProject.name = "formula_ai"
