--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,16 +1,15 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
+    id "dev.flutter.flutter-gradle-plugin"
 }
 
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
 android {
-    namespace "com.example.formula_ai"
+    namespace "com.example.formula_a"
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.formula_ai"
+        applicationId "com.example.formula_a"
         minSdk 21
         targetSdk 34
         versionCode 1
@@ -19,7 +18,6 @@ android {
 
     buildTypes {
         release {
-            // Debug keystore se sign karega (baad me hum apna custom keystore lagayenge)
             signingConfig signingConfigs.debug
             minifyEnabled false
         }
@@ -27,7 +25,7 @@ android {
 }
 
 flutter {
-    source '../..'
+    source "../.."
 }
 
 dependencies {
