--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,21 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        // Flutter SDK repo
+        maven {
+            url "${System.getenv("FLUTTER_STORAGE_BASE_URL") ?: "https://storage.googleapis.com/download.flutter.io"}"
+        }
+    }
+
+    includeBuild("../flutter/packages/flutter_tools/gradle")
+}
+
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "com.android.application" version "8.3.0" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.22" apply false
+}
+
 include(":app")
-rootProject.name = "formula_ai"
