--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,19 +3,13 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
-        // Flutter SDK repo
-        maven {
-            url "${System.getenv("FLUTTER_STORAGE_BASE_URL") ?: "https://storage.googleapis.com/download.flutter.io"}"
-        }
     }
-
-    includeBuild("../flutter/packages/flutter_tools/gradle")
 }
 
 plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "8.3.0" apply false
     id "org.jetbrains.kotlin.android" version "1.9.22" apply false
+    id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
 }
 
 include(":app")
