--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,6 +30,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            shrinkResources false
         }
     }
 }
