--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: formula_ai
 description: A digital marketing calculator app with 20 tools.
-publish_to: 'none' # since it's not a public package
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -20,6 +20,13 @@ dependencies:
   url_launcher: ^6.3.1
   http: ^1.2.2
 
+  # Missing dependencies (added now)
+  flutter_dotenv: ^5.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  pdf: ^3.10.7
+  printing: ^5.12.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -30,3 +37,4 @@ flutter:
 
   assets:
     - assets/icons/
+    - .env
