--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,11 +21,19 @@ android {
 
     defaultConfig {
         applicationId "com.formula.ai"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
+    compileOptions {
+    sourceCompatibility JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
+}
+
+kotlinOptions {
+    jvmTarget = "17"
+}
 
     buildTypes {
         release {
