--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,18 +1,17 @@
-rootProject.name = "formula_ai"
-include(":app")
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
 
-def localPropertiesFile = new File(rootDir, "local.properties")
-def properties = new Properties()
-
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader("UTF-8") { reader ->
-        properties.load(reader)
+    plugins {
+        id "dev.flutter.flutter-gradle-plugin" version "1.0.0"
     }
 }
 
-def flutterSdkPath = properties.getProperty("flutter.sdk")
-if (flutterSdkPath == null) {
-    throw new GradleException("Flutter SDK not found. Define flutter.sdk in local.properties.")
+plugins {
+    id "dev.flutter.flutter-gradle-plugin"
 }
 
-apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+include ':app'
