--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,14 +4,12 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
-
-    plugins {
-        id "dev.flutter.flutter-gradle-plugin" version "1.0.0"
-    }
 }
 
 plugins {
-    id "dev.flutter.flutter-gradle-plugin"
+    id "dev.flutter.flutter-gradle-plugin" apply false
 }
 
-include ':app'
+include ":app"
+
+apply from: "../packages/flutter_tools/gradle/app_plugin_loader.gradle"
