--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,5 +45,6 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.22"
+    // ❌ REMOVE Kotlin stdlib override completely
+    // Flutter will inject correct Kotlin version
 }
