--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,28 +1,17 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
+    id "dev.flutter.flutter-gradle-plugin"
 }
-
-def localProperties = new Properties()
-def localPropertiesFile = rootProject.file("local.properties")
-
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader("UTF-8") { reader ->
-        localProperties.load(reader)
-    }
-}
-
-def flutterRoot = localProperties.getProperty("flutter.sdk")
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     namespace "com.formula.ai"
-    compileSdkVersion 34
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.formula.ai"
-        minSdkVersion 23
-        targetSdkVersion 34
+        minSdk 23
+        targetSdk 34
         versionCode 1
         versionName "1.0"
     }
@@ -44,7 +33,10 @@ android {
     }
 }
 
+flutter {
+    source "../.."
+}
+
 dependencies {
-    // ❌ REMOVE Kotlin stdlib override completely
-    // Flutter will inject correct Kotlin version
+    // No manual Kotlin stdlib
 }
