--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,18 +1,13 @@
-include ':app'
-
-def localProperties = new Properties()
-def localPropertiesFile = new File(rootDir, "local.properties")
-
-if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader("UTF-8") { reader ->
-        localProperties.load(reader)
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
     }
 }
 
-def flutterSdkPath = localProperties.getProperty("flutter.sdk")
-
-if (flutterSdkPath == null) {
-    throw new GradleException("Flutter SDK not found. local.properties is missing flutter.sdk entry.")
+plugins {
+    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
 }
 
-apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+include ":app"
