--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,13 +1,18 @@
-pluginManagement {
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
+include ':app'
+
+def localProperties = new Properties()
+def localFile = new File(rootDir, "local.properties")
+
+if (localFile.exists()) {
+    localFile.withReader("UTF-8") { reader ->
+        localProperties.load(reader)
     }
 }
 
-plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+def flutterSdkPath = localProperties.getProperty("flutter.sdk")
+
+if (flutterSdkPath == null) {
+    throw new GradleException("Flutter SDK not found. Add flutter.sdk to local.properties")
 }
 
-include ":app"
+apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
