--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,17 +1,29 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    id "dev.flutter.flutter-gradle-plugin"
 }
+
+def localProperties = new Properties()
+def localFile = rootProject.file("local.properties")
+
+if (localFile.exists()) {
+    localFile.withReader("UTF-8") { reader ->
+        localProperties.load(reader)
+    }
+}
+
+def flutterRoot = localProperties.getProperty("flutter.sdk")
+
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     namespace "com.formula.ai"
-    compileSdk 34
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.formula.ai"
-        minSdk 23
-        targetSdk 34
+        minSdkVersion 23
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -33,10 +45,6 @@ android {
     }
 }
 
-flutter {
-    source "../.."
-}
-
 dependencies {
-    // No manual Kotlin stdlib
+    // Do not add Kotlin stdlib manually
 }
