--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,22 +17,27 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0'   # Yahan apna Flutter version likh sakte ho
+          flutter-version: '3.22.0'
+
+      - name: Fix Gradle Properties (Kotlin issue fix)
+        run: |
+          echo "org.gradle.jvmargs=-Xmx4G" >> android/gradle.properties
+          echo "android.useAndroidX=true" >> android/gradle.properties
+          echo "android.enableJetifier=true" >> android/gradle.properties
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build APK (release)
-        run: flutter build apk --release
+      - name: Build APK (verbose mode)
+        run: flutter build apk --release --verbose
 
-      - name: Build App Bundle (.aab)
-        run: flutter build appbundle --release
+      - name: Show output directories
+        run: ls -R build/app/outputs/
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Flutter-release-builds
+          name: Flutter-Release-Builds
           path: |
-            build/app/outputs/flutter-apk/app-release.apk
-            build/app/outputs/bundle/release/app-release.aab
-            
+            build/app/outputs/flutter-apk/
+            build/app/outputs/bundle/release/
