--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,18 +14,27 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      - name: Set up Java (AGP 7.4.2 requires Java 17)
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.22.0'
 
+      - name: Enable Gradle permissions
+        run: chmod +x android/gradlew
+
       - name: Install dependencies
         run: flutter pub get
 
       - name: Build APK (release)
-        run: flutter build apk --release --verbose
+        run: flutter build apk --release --split-per-abi --verbose
 
-      - name: Show output directories
+      - name: Show Flutter output directory
         run: ls -R build/app/outputs/
 
       - name: Upload build artifacts
@@ -33,6 +42,6 @@ jobs:
         with:
           name: Flutter-release-builds
           path: |
-            build/app/outputs/apk/release/
             build/app/outputs/flutter-apk/
+            build/app/outputs/apk/release/
             build/app/outputs/bundle/release/
