--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,3 +18,7 @@ allprojects {
         mavenCentral()
     }
 }
+rootProject.buildDir = "../build"
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
