--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,47 +1,53 @@
-name: Flutter Build
+name: Flutter Android Release
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Java (AGP 7.4.2 requires Java 17)
-        uses: actions/setup-java@v3
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: "17"
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.0'
+          flutter-version: "3.22.0" # apne project wali version ke kareeb rakhna
 
-      - name: Enable Gradle permissions
-        run: chmod +x android/gradlew
+      - name: Decode keystore from secret
+        run: |
+          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-key.jks
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
 
-      - name: Install dependencies
+      - name: Create key.properties
+        run: |
+          cat <<EOF > android/key.properties
+          storePassword=${{ secrets.KEYSTORE_PASSWORD }}
+          keyPassword=${{ secrets.KEYSTORE_PASSWORD }}
+          keyAlias=${{ secrets.KEY_ALIAS }}
+          storeFile=release-key.jks
+          EOF
+
+      - name: Flutter pub get
         run: flutter pub get
 
-      - name: Build APK (release)
-        run: flutter build apk --release --split-per-abi --verbose
+      - name: Build Android release APK (per ABI)
+        run: flutter build apk --release --split-per-abi
 
-      - name: Show Flutter output directory
-        run: ls -R build/app/outputs/
-
-      - name: Upload build artifacts
+      - name: Upload APK artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Flutter-release-builds
-          path: |
-            build/app/outputs/flutter-apk/
-            build/app/outputs/apk/release/
-            build/app/outputs/bundle/release/
+          name: android-apk-release
+          path: build/app/outputs/flutter-apk/*.apk
