--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           flutter-version: "3.22.0"
 
+      # SECRET se keystore decode
       - name: Decode keystore from secret
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
@@ -33,14 +34,15 @@ jobs:
           echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-key.jks
           ls -l android/app
 
+      # key.properties bilkul bina space ke (IMPORTANT)
       - name: Create key.properties
         run: |
           cat <<EOF > android/key.properties
-          storePassword=${{ secrets.KEYSTORE_PASSWORD }}
-          keyPassword=${{ secrets.KEY_PASSWORD }}
-          keyAlias=${{ secrets.KEY_ALIAS }}
-          storeFile=release-key.jks
-          EOF
+storePassword=${{ secrets.KEYSTORE_PASSWORD }}
+keyPassword=${{ secrets.KEY_PASSWORD }}
+keyAlias=${{ secrets.KEY_ALIAS }}
+storeFile=release-key.jks
+EOF
 
       - name: Flutter pub get
         run: flutter pub get
