--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,4 +1,4 @@
-name: Flutter Android Release
+name: Flutter Android Debug APK
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  build-android:
+  build-android-debug:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,31 +25,14 @@ jobs:
         with:
           flutter-version: "3.22.0"
 
-      - name: Decode keystore from secret
-        env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
-        run: |
-          mkdir -p android/app
-          echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-key.jks
-          ls -l android/app
-
-      - name: Create key.properties
-        run: |
-          cat <<EOF > android/key.properties
-          storePassword=${{ secrets.KEYSTORE_PASSWORD }}
-          keyPassword=${{ secrets.KEY_PASSWORD }}
-          keyAlias=${{ secrets.KEY_ALIAS }}
-          storeFile=release-key.jks
-          EOF
-
       - name: Flutter pub get
         run: flutter pub get
 
-      - name: Build Android release APK (per ABI)
-        run: flutter build apk --release --split-per-abi
+      - name: Build Android debug APK
+        run: flutter build apk --debug
 
-      - name: Upload APK artifacts
+      - name: Upload debug APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk-release
-          path: build/app/outputs/flutter-apk/*.apk
+          name: android-debug-apk
+          path: build/app/outputs/flutter-apk/app-debug.apk
